--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.1.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.1.adoc
@@ -3,7 +3,7 @@ ifndef::rootdir[:rootdir: .]
 ifndef::imagesdir[:imagesdir: {rootdir}/../images]
 [[viatra-21]]
 
-= VIATRA 2.1 (To be released on 19th December 2018B)
+= VIATRA 2.1 (To be released on 19th December 2018)
 
 == New and Noteworthy
 
