--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.2.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/releases/viatra-2.2.adoc
@@ -9,7 +9,13 @@ ifndef::imagesdir[:imagesdir: {rootdir}/../images]
 
 === Batch Transformation API Refresh
 
+The batch transformation API was updated to provide better support for that are controlled by data dependencies. The control flow for these transformations is usually trivial - the rules are executed one by one until there are no more matches left. This behavior is very similar to event-driven transformation with the main difference that these transformations are not executed on changes in the underlying model but triggered manually.   
 
+The API received multiple small enhancements to support such transformations:
+
+1. New statement variants were introduced that can handle transformation groups or all rules of the transformations.
+2. A new statement type `hasCurrent` was added that returns whether a given set of rules can be fired.
+3. The handling of rule filters was updated to handle default filters that can be overridden by the transformation statements. 
 
 == Migrating to VIATRA 2.2
 
